Fixed scrollbar in school list

--- a/styles/searchTable.css
+++ b/styles/searchTable.css
@@ -10,6 +10,10 @@
     background-color: #e5e5e5;
 }
 
+    height: 400px;
+    display: block;
+}
+
 #myTable td a {
     display: block;
     text-decoration: none;
